# LazyCruncherWorkshop

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: release.yml
scripts/: build-msi.ps1
src/: config.rs  import.rs  lib.rs  main.rs  ranks.rs  sfx.rs
wix/: main.wxs
